--- a/games_poc/src/components/achievements/style.css
+++ b/games_poc/src/components/achievements/style.css
@@ -21,3 +21,9 @@
 .header {
     padding:3px;
 }
+.achievement {
+    background:#F33;
+    display:inline-block;
+    padding:16px;
+    border:5px solid black;
+}
