--- a/games_poc/src/components/achievements/style.css
+++ b/games_poc/src/components/achievements/style.css
@@ -25,5 +25,11 @@
     background:#F33;
     display:inline-block;
     padding:16px;
-    border:5px solid black;
+    border:2px solid black;
+}
+.achievement.green {
+    background:#3F3;
+    display:inline-block;
+    padding:16px;
+    border:2px solid black;
 }
