--- a/games_poc/src/components/leaderboard/style.scss
+++ b/games_poc/src/components/leaderboard/style.scss
@@ -10,10 +10,11 @@
 
 .cardBody {
   padding: 13px;
+  background:#EEF;
 }
 
 .newpage {
-  padding-top: 22px;
+  padding-top: 12px;
 }
 .mylabel {
   font:  bold 14px Avenir, serif;
