--- a/games_poc/src/components/achievements/style.scss
+++ b/games_poc/src/components/achievements/style.scss
@@ -1,20 +1,20 @@
 .snooze {
-	padding: 15px;
+	padding: 10px;
 	min-height: 100%;
 	width: 100%;
 }
 
 .cardHeader {
-  padding: 13px;
+  padding: 10px;
 }
 
 .cardBody {
-  padding: 13px;
+  padding: 10px;
   background:#EEF;
 }
 
 .newpage {
-  padding-top: 11px;
+  padding-top: 10px;
 }
 .mylabel {
   font:  bold 16px Avenir, serif;
@@ -25,9 +25,9 @@
 .achievement {
     display:inline-block;
     padding:6px;
-    border:1px solid black;
-    border-radius: 3px;
-    margin:2px;
+    border:2px solid #888;
+    border-radius: 4px;
+    margin:3px;
     min-width:45px;
     text-align: center;
     &.red {
@@ -52,6 +52,10 @@
         background:#3EF;
         color:black;
     }
-
 }
 
+.bgroup {
+    margin:0 auto;
+    width:100%;
+    text-align:center;
+}
