--- a/games_poc/src/components/leaderboard/style.scss
+++ b/games_poc/src/components/leaderboard/style.scss
@@ -17,7 +17,7 @@
   padding-top: 10px;
 }
 .mylabel {
-  font:  bold 14px Avenir, serif;
+  font:  bold 14px Roboto, serif;
 }
 .header {
     padding:3px;
