--- a/games_poc/src/components/accountinfo/style.scss
+++ b/games_poc/src/components/accountinfo/style.scss
@@ -2,7 +2,9 @@
     padding:10px;
     border:1px solid black;
     margin:10px;
+    font:  16px 'Roboto', sans-serif;
 }
 .dates {
-    font-size:11px;
+        font:  11px 'Roboto', sans-serif;
+
 }
