--- a/games_poc/src/components/currentuser/style.scss
+++ b/games_poc/src/components/currentuser/style.scss
@@ -14,7 +14,7 @@
 }
 
 .userLabel {
-  font:  bold 14px Roboto, serif;
+    font:  Bold 16px 'Roboto', sans-serif;
 }
 .newpage {
   padding: 10px 0;
