--- a/games_poc/src/components/snooze/style.css
+++ b/games_poc/src/components/snooze/style.css
@@ -16,7 +16,7 @@
   padding-top: 10px;
 }
 .mylabel {
-  font:  bold 16px Roboto, serif;
+  font:  bold 16px 'Roboto', serif;
 }
 .header {
     padding:3px;
