--- a/games_poc/src/components/gamescarousel/style.scss
+++ b/games_poc/src/components/gamescarousel/style.scss
@@ -5,7 +5,7 @@
 .header {
     padding:0px 5px;
     margin:5px;
-    font:  bold 14px Roboto, serif;
+    font:  Bold 13px 'Roboto', sans-serif;
 
 }
 .faves {
