--- a/games_poc/src/components/snooze/style.scss
+++ b/games_poc/src/components/snooze/style.scss
@@ -16,8 +16,9 @@
   padding-top: 10px;
 }
 .mylabel {
-  font:  bold 16px 'Roboto', serif;
+  font:  bold 16px 'Roboto', sans-serif;
 }
+
 .header {
     padding:3px;
 }
