--- a/games_poc/src/components/leaderboard/style.scss
+++ b/games_poc/src/components/leaderboard/style.scss
@@ -1,3 +1,4 @@
+
 .snooze {
 	padding: 10px;
 	min-height: 100%;
@@ -25,23 +26,37 @@
 .header {
     padding:3px;
 }
-.person {
-    width:100px;
-    text-align:left;
-    display:inline-block;
+.game {
+  text-align:left;
+  display:inline-block;
+  width:65%;
+  font:  Bold 14px 'Orbitron', sans-serif;
+  padding:1px 5px;
+
+}
+.player {
+  text-align:left;
+  display:inline-block;
+  width:35%;
+  font:  13px 'Roboto', sans-serif;
+  padding:1px 5px;
+  .email {
+    font:  10px 'Roboto', sans-serif;
+    color:#eee;
+  }
 
 }
 .score {
-    width:150px;
-    text-align:left;
+    width:35px;
+    text-align:center;
     display:inline-block;
-    padding-left:20px;
-}
-.gamen {
-  width:50%;
-  font:  Bold 16px 'Roboto', sans-serif;
-  display:inline-block;
-  padding:1px 5px;
+    font-family: "Orbitron", sans-serif;
+  font-face:bold;
+  padding:3px;
+  margin:3px;
+  background:white;
+  border:1px solid black;
+  border-radius: 5px;
 }
 .tplay {
   width:50%;
@@ -52,4 +67,31 @@
   background:#ccccff;
   margin:10px;
 
+}
+
+.ach {
+  width: 35px;
+  text-align: center;
+  display: inline-block;
+  font-family: "Orbitron", sans-serif;
+  font-face: bold;
+  font-size: 12pt;
+  line-height: 14pt;
+  padding-top: 4px;
+  margin: 5px 1px;
+  background: #33F;
+  border: 1px solid black;
+  border-radius: 5px;
+  color: white;
+
+    &.blue {
+    background: #33F;
+  }
+    &.red {
+      background: #F33;
+    }
+    &.green {
+      background: #3F3;
+      color:black;
+    }
 }
