--- a/games_poc/src/components/leaderboard/style.scss
+++ b/games_poc/src/components/leaderboard/style.scss
@@ -6,16 +6,16 @@
 }
 
 .cardHeader {
-  padding: 10px;
+  padding: 8px;
 }
 
 .cardBody {
-  padding: 10px;
+  padding: 8px;
   background:#EEF;
 }
 
 .newpage {
-  padding-top: 10px;
+  padding-top: 8px;
 }
 .mylabel {
   font:  Bold 16px 'Roboto', sans-serif;
@@ -69,7 +69,8 @@
 .grid {
   border:1px solid #9e9e9e;
   background:#ccccff;
-  margin:10px;
+  margin:5px;
+  padding:3px;
 
 }
 
@@ -90,6 +91,7 @@
   background-repeat: no-repeat;
   background-color:  #363;
   color: white;
+  vertical-align:top;
 
   &.blue {
     background-color: #66c;
