--- a/games_poc/src/components/pfooter/style.scss
+++ b/games_poc/src/components/pfooter/style.scss
@@ -1,4 +1,8 @@
-.home, .page {
+.footer {
 	padding: 0px !important;
 	width: 100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	background:#777;
 }
